--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -37,8 +37,7 @@
 {% if method.response.description %}
 
 {%if method.response.type|raw%}
-#### Returns
-{{ method.response.type|raw }}
+#### Returns: `{{ method.response.type|raw }}`
 {% endif %}
 
 {% endif %}
