--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -16,9 +16,8 @@
 
 {% if method.final %}* This method is **final**.{% endif %}
 
-{% if method.deprecated %}* **Warning:** this method is **deprecated**. This means that this method will likely be removed in a future version.
+* **Warning:** this method is **deprecated**. This means that this method will likely be removed in a future version.
 
-{% endif %}
 
 {{ method.summary|raw }}
 {{ method.description|raw }}
