--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -16,7 +16,8 @@
 
 {% if method.final %}* This method is **final**.{% endif %}
 
-* **Warning:** this method is **deprecated**. This means that this method will likely be removed in a future version.
+> [!NOTE]
+> **Warning:** This method is **deprecated**. This means that this method will likely be removed in a future version.
 
 
 {{ method.summary|raw }}
