--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -17,7 +17,7 @@
 {% if method.final %}* This method is **final**.{% endif %}
 
 > [!WARNING]
-> **Warning:** This method is **deprecated**. This means that this method will likely be removed in a future version.
+> This method is **deprecated**. This means that this method will likely be removed in a future version.
 
 
 {{ method.summary|raw }}
