--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -15,10 +15,10 @@
 {% if method.abstract %}* This method is **abstract**.{% endif %}
 
 {% if method.final %}* This method is **final**.{% endif %}
-
+{% if method.deprecated %}
 > [!WARNING]
 > This method is **deprecated**. This means that this method will likely be removed in a future version.
-
+{% endif %}
 
 {{ method.summary|raw }}
 {{ method.description|raw }}
