--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -36,7 +36,7 @@
 
 {% if method.response.description %}
 
-{%if method.response.type|raw%}
+{%if method.response.type|replace({'void': ''})|raw%}
 #### Returns: `{{ method.response.type|raw }}`
 {% endif %}
 
