--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -47,13 +47,13 @@
 ## Methods
 {% for method in node.methods %}
 
-`{{ method.name|raw }}({% for argument in method.arguments %}
+[`{{ method.name|raw }}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} $
 {{- argument.name }}{{ argument.default ? ' = '~argument.default }}
 {%- if not loop.last %}, {% endif %}
 {%- endfor %})
-{{- method.response.type ? ' : '~method.response.type }}`
+{{- method.response.type ? ' : '~method.response.type }}`](#method-{{ method.name|raw }})
 
 {% endfor %}
 
