--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -46,7 +46,7 @@
 {% if node.methods|length > 0 %}
 ## Methods
 {% for method in node.methods %}
-- [`{{ method.name|raw }}({% for argument in method.arguments %}
+> - [`{{ method.name|raw }}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} $
 {{- argument.name }}{{ argument.default ? ' = '~argument.default }}
