--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -46,14 +46,14 @@
 {% if node.methods|length > 0 %}
 ## Methods
 {% for method in node.methods %}
-> - [`{{ method.name|raw }}({% for argument in method.arguments %}
+> [`{{ method.name|raw }}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} $
 {{- argument.name }}{{ argument.default ? ' = '~argument.default }}
 {%- if not loop.last %}, {% endif %}
 {%- endfor %})
 {{- method.response.type ? ' : '~method.response.type }}`](#method-{{ method.name|raw }})
-{% endfor %}
+> {% endfor %}
 
 {% for method in node.methods %}
 {% include 'method.md.twig' %}
