--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -53,7 +53,8 @@
 {%- if not loop.last %}, {% endif %}
 {%- endfor %})
 {{- method.response.type ? ' : '~method.response.type }}`](#method-{{ method.name|raw }})
-> {% endfor %}
+> 
+{% endfor %}
 
 {% for method in node.methods %}
 {% include 'method.md.twig' %}
