--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -6,8 +6,7 @@
 {{- argument.name }}{{ argument.default ? ' = '~argument.default }}
 {%- if not loop.last %}, {% endif %}
 {%- endfor %})
-{{- method.response.type ? ' : '~method.response.type }}
-`</a>
+{{- method.response.type ? ' : '~method.response.type }}`</a>
 
 {% if method.static %}* This method is **static**.{% endif %}
 
