--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -1,12 +1,12 @@
 {# Method signature #}
 ---
-### <a name="{{ method.name|raw }}">`{% if method.final %}final {% endif %}{{method.visibility}} {{ method.name }}({% for argument in method.arguments %}
+### <a name="{{ method.name|raw }}">```php {% if method.final %}final {% endif %}{{method.visibility}} {{ method.name }}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} $
 {{- argument.name }}{{ argument.default ? ' = '~argument.default }}
 {%- if not loop.last %}, {% endif %}
 {%- endfor %})
-{{- method.response.type ? ' : '~method.response.type }}`</a>
+{{- method.response.type ? ' : '~method.response.type }}```</a>
 
 {% if method.static %}* This method is **static**.{% endif %}
 
