--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -47,14 +47,13 @@
 ## Methods
 {% autoescape false %}
 {% for method in node.methods %}
-{{ method }}
 > [`{{ method.name|raw }}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} $
 {{- argument.name }}{{ argument.default ? ' = '~argument.default|raw }}
 {%- if not loop.last %}, {% endif %}
 {%- endfor %})
-{{- method.response.type ? ' : '~method.response.type }}`](#method_{{ method }})
+{{- method.response.type ? ' : '~method.response.type }}`](#method_{{ method.name|route('class:short') }})
 > 
 {% endfor %}
 {% endautoescape %}
