--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -53,7 +53,7 @@
 {{- argument.name }}{{ argument.default ? ' = '~argument.default|raw }}
 {%- if not loop.last %}, {% endif %}
 {%- endfor %})
-{{- method.response.type ? ' : '~method.response.type }}`](#method_{{ method.name }}_preview)
+{{- method.response.type ? ' : '~method.response.type }}`](#{{ method.name|lower }})
 > 
 {% endfor %}
 {% endautoescape %}
