--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -1,7 +1,7 @@
 {% import "include/macros.twig" as macros %}
 {% block content %}
 
-# `{{ node.FullyQualifiedStructuralElementName }}`
+# :copyright: `{{ node.FullyQualifiedStructuralElementName }}`
 
 {{ node.summary|raw }}
 
