--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -47,7 +47,7 @@
 ## Methods
 {% autoescape false %}
 {% for method in node.methods %}
-> [`{{ method.name|raw }}({% for argument in method.arguments %}
+> :large_orange_diamond: [`{{ method.name|raw }}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} $
 {{- argument.name }}{{ argument.default ? ' = '~argument.default|raw }}
