--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -56,4 +56,4 @@
 
 {% endif %}{# method.tags.see || method.tags.link #}
 
-<a href="#top">:small_red_triangle:</a>
+<a href="README.md">:small_red_triangle:</a>
