--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -47,7 +47,7 @@
 ## Methods
 {% autoescape false %}
 {% for method in node.methods %}
-> {% if method.visibility == 'protected' %}🟠{% endif %}{% if method.visibility == 'private' %}🔴{% endif %}{% if method.visibility == 'public' %}🟢{% endif %} [`{% if method.name|raw == '__construct' %}new {{ node.FullyQualifiedStructuralElementName }}{% else %}{{ method.name|raw }}{% endif %}({% for argument in method.arguments %}
+> {% if method.visibility == 'protected' %}🟠{% endif %}{% if method.visibility == 'private' %}🔴{% endif %}{% if method.visibility == 'public' %}🟢{% endif %} [`{% if method.name|raw == '__construct' %}new {{ node.name|raw }}{% else %}{{ method.name|raw }}{% endif %}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} $
 {{- argument.name }}{{ argument.default ? ' = '~argument.default|raw }}
