--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -53,9 +53,7 @@
 {{- argument.name }}{{ argument.default ? ' = '~argument.default|raw }}
 {%- if not loop.last %}, {% endif %}
 {%- endfor %})
-{% if method.name|raw != '__construct' %}
-{{- method.response.type ? ' : '~method.response.type }}`](#{{ method.name|lower }})
-{% endif %}
+{% if method.name|raw != '__construct' %}{{- method.response.type ? ' : '~method.response.type }}{% endif %}`](#{{ method.name|lower }})
 > 
 {% endfor %}
 {% endautoescape %}
