--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -1,9 +1,9 @@
 {# Method signature #}
 ---
 {% autoescape false %}
-### {% if method.visibility == 'protected' %}🟠{% endif %}{% if method.visibility == 'private' %}🔴{% endif %}{% if method.visibility == 'public' %}🟢{% endif %} <a name="{{ method.name|lower }}" id="{{ method.name|lower }}">{% if method.name|raw == '__construct' %}new {{ node.name|raw }}{% else %}{{ method.name }}{% endif %}</a>
+### {% if method.visibility == 'protected' %}🟠{% endif %}{% if method.visibility == 'private' %}🔴{% endif %}{% if method.visibility == 'public' %}🟢{% endif %} <a name="{{ method.name|lower }}" id="{{ method.name|lower }}">{% if method.name|raw == '__construct' %}Constructor{% else %}{{ method.name }}{% endif %}</a>
 ```php
-{% if method.final %}final {% endif %}{{method.visibility}} {{ method.name }}({% for argument in method.arguments %}
+{% if method.name|raw == '__construct' %}new {{ node.name|raw }}{% else %}{% if method.final %}final {% endif %}{{method.visibility}} {{ method.name }}{% endif %}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} ${{- argument.name }}{{- argument.default ? ' = ' ~ argument.default|raw }}
 {%- if not loop.last %}, {% endif %}
