--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -7,7 +7,7 @@
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} ${{- argument.name }}{{- argument.default ? ' = ' ~ argument.default|raw }}
 {%- if not loop.last %}, {% endif %}
-{%- endfor %})
+{%- endfor %});
 ```
 {% endautoescape %}
 
