--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -4,7 +4,7 @@
 ### {% if method.visibility == 'protected' %}🟠{% endif %}{% if method.visibility == 'private' %}🔴{% endif %}{% if method.visibility == 'public' %}🟢{% endif %} <a name="{{ method.name|lower }}" id="{{ method.name|lower }}">{% if method.name|raw == '__construct' %}Constructor{% else %}{{ method.name }}{% endif %}</a>
 {{ method.summary|raw }}
 {{ method.description|raw }}
-#### Call
+#### Usage
 ```php
 {% if method.name|raw == '__construct' %}$dns = new {{ node.name|raw }}{% else %}$dns->{{ method.name }}{% endif %}({% for argument in method.arguments %}
 {{- argument.type }} : 
