--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -16,7 +16,9 @@
 {% endif %}
 {{ method.summary|raw }}
 {{ method.description|raw }}
-#### $~~~~~~~~~~~$ Usage
+
+<dl><dd><dl><dd><dl><dd><dl><dd>
+#### Usage
 ```php
 {% if method.name|raw == '__construct' %}$dns = new {{ node.name|raw }}{% else %}$dns->{{ method.name }}{% endif %}({% for argument in method.arguments %}
 {{- argument.type }} : 
@@ -31,7 +33,7 @@
 {% if method.final %}* This method is **final**.{% endif %}
 
 {% if method.arguments is not empty %}
-#### $~~~~~~~~~~~$ Parameters
+#### Parameters
 
 | Parameter | Type | Description |
 |-----------|------|-------------|
@@ -44,7 +46,7 @@
 {% if method.response.description %}
 
 {%if method.response.type|replace({'void': ''})|raw%}
-#### $~~~~~~~~~~~$ Returns: `{{ method.response.type|raw }}`
+#### Returns: `{{ method.response.type|raw }}`
 {% endif %}
 
 {% endif %}
@@ -60,3 +62,4 @@
 {% endfor %}
 
 {% endif %}{# method.tags.see || method.tags.link #}
+</dd></dl></dd></dl></dd></dl></dd></dl>
