--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -19,13 +19,12 @@
 
 <dl><dd><dl><dd><dl><dd><dl><dd>
 #### Usage
-```php
-{% if method.name|raw == '__construct' %}$dns = new {{ node.name|raw }}{% else %}$dns->{{ method.name }}{% endif %}({% for argument in method.arguments %}
+<pre>{% if method.name|raw == '__construct' %}$dns = new {{ node.name|raw }}{% else %}$dns->{{ method.name }}{% endif %}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} ${{- argument.name }}{{- argument.default ? ' = ' ~ argument.default|raw }}
 {%- if not loop.last %}, {% endif %}
-{%- endfor %});
-```
+{%- endfor %});</pre>
+
 {% endautoescape %}
 
 {% if method.static %}* This method is **static**.{% endif %}
