--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -18,7 +18,7 @@
 {{ method.description|raw }}
 
 <dl><dd><dl><dd><dl><dd><dl><dd>
-#### Usage
+<h6>Usage</h6>
 <pre lang="php">{% if method.name|raw == '__construct' %}$dns = new {{ node.name|raw }}{% else %}$dns->{{ method.name }}{% endif %}({% for argument in method.arguments %}
 {{- argument.type }} : 
 {{- argument.byReference ? '&' }} ${{- argument.name }}{{- argument.default ? ' = ' ~ argument.default|raw }}
@@ -31,8 +31,7 @@
 {% if method.final %}* This method is **final**.{% endif %}
 
 {% if method.arguments is not empty %}
-#### Parameters
-
+<h6>Parameters</h6>
 | Parameter | Type | Description |
 |-----------|------|-------------|
 {% for argument in method.arguments %}
@@ -44,7 +43,7 @@
 {% if method.response.description %}
 
 {%if method.response.type|replace({'void': ''})|raw%}
-#### Returns: `{{ method.response.type|raw }}`
+<h6>Returns: `{{ method.response.type|raw }}`</h6>
 {% endif %}
 
 {% endif %}
