--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -32,11 +32,12 @@
 
 {% if method.arguments is not empty %}
 <h6>Parameters</h6>
-| Parameter | Type | Description |
-|-----------|------|-------------|
+<table>
+<tr><th>Parameter</th><th>Type</th><th>Description</th></tr>
 {% for argument in method.arguments %}
-| `{{ argument.name }}` | **{{ argument.type ? argument.type|raw }}** | {{ argument.description|replace({'|': '&#124;'})|nl2br|replace({"\n": "", "\r": "", "\t": ""})|raw }} |
+<tr><td>`{{ argument.name }}`</td><td>**{{ argument.type ? argument.type|raw }}**</td><td>{{ argument.description|replace({'|': '&#124;'})|nl2br|replace({"\n": "", "\r": "", "\t": ""})|raw }}</td></tr>
 {% endfor %}
+</table>
 
 {% endif %}{# method.arguments is not empty #}
 
