--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -48,7 +48,7 @@
 {% if method.response.description %}
 
 {%if method.response.type|replace({'void': ''})|raw%}
-<h6>Returns: `{{ method.response.type|raw }}`</h6>
+<h6>Returns: <strong>{{ method.response.type|raw|split('|') }}</strong></h6>
 {% endif %}
 
 {% endif %}
