--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -52,8 +52,7 @@
 {{- argument.byReference ? '&' }} $
 {{- argument.name }}{{ argument.default ? ' = '~argument.default|raw }}
 {%- if not loop.last %}, {% endif %}
-{%- endfor %})
-{% if method.name|raw != '__construct' %}{{- method.response.type ? ' : '~method.response.type }}{% endif %}`](#{{ method.name|lower }})
+{%- endfor %}){% if method.name|raw != '__construct' %}{{- method.response.type ? ' : '~method.response.type }}{% endif %}`](#{{ method.name|lower }})
 > 
 {% endfor %}
 {% endautoescape %}
