--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -39,7 +39,7 @@
 <table>
 <tr><th>Parameter</th><th>Type</th><th>Description</th></tr>
 {% for argument in method.arguments %}
-<tr><td><kbd>{{ argument.name }}</kbd></td><td><kbd>{{ argument.type ? argument.type|raw }}</kbd></td><td><i>{{ argument.description|replace({'|': '&#124;'})|nl2br|replace({"\n": "", "\r": "", "\t": ""})|raw }}</i></td></tr>
+<tr><td><kbd>{{ argument.name }}</kbd></td><td><kbd>{{ argument.type ? argument.type|raw }}</kbd></td><td><i>{% autoescape false %}{{ argument.description|replace({'|': '&#124;'})|nl2br|replace({"\n": "", "\r": "", "\t": ""})|raw }}{% endautoescape %}</i></td></tr>
 {% endfor %}
 </table>
 
