--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -24,7 +24,7 @@
 
 <h6>Usage</h6>
 <pre lang="php">{% if method.name|raw == '__construct' %}$dns = new {{ node.name|raw }}{% else %}$dns->{{ method.name }}{% endif %}({% for argument in method.arguments %}
-{{- argument.type }} : 
+{% if argument.type %} : {% endif %}
 {{- argument.byReference ? '&' }} ${{- argument.name }}{{- argument.default ? ' = ' ~ argument.default|raw }}
 {%- if not loop.last %}, {% endif %}
 {%- endfor %});</pre>
