--- a/Docs/theme/method.md.twig
+++ b/Docs/theme/method.md.twig
@@ -41,7 +41,7 @@
 {% for argument in method.arguments %}
 <tr>
 	<td><kbd>{{ argument.name }}</kbd></td>
-	<td><kbd>{{ argument.type ? argument.type|raw }}</kbd></td>
+	<td>{% if argument.type %}<kbd>{{ argument.type ? argument.type|raw }}</kbd>{% endif %}</td>
 	<td><i>{% autoescape false %}{{ argument.description|raw|nl2br|replace({"\n": "", "\r": "", "\t": ""}) }}{% endautoescape %}</i></td>
 </tr>
 {% endfor %}
