--- a/Docs/theme/class.md.twig
+++ b/Docs/theme/class.md.twig
@@ -6,6 +6,15 @@
 {{ node.summary|raw }}
 {{ node.description|raw }}
 
+# Support me!
+Donations are an important contribution to the development of OpenSource projects. With your donation you can help me to advance all projects. Your support enables me to support my programming time.
+
+Be a team-player, all feedbacks of my donations will have the priority. I will build this for **YOU**!
+
+[![PAYPAL]](https://paypal.me/debitdirect)
+
+[PAYPAL]: https://img.shields.io/badge/PayPal-%24?style=for-the-badge&logo=paypal&color=%23169BD7
+
 {% if node.parent %}* Parent class: {{ macros.mdClassLink(node.parent, macros.mdClassPath(node), node.parent.FullyQualifiedStructuralElementName) }}
 {% endif %}
 {% if node.final %}* This class is marked as **final** and can't be subclassed
